Fix footer for collapsed pages

--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -25,7 +25,7 @@ body {
 
 #footer {
     width: 100%;
-    height: 215px;
+    min-height: 215px;
     padding-left: 10px;
     padding-right: 10px;
     padding-top: 25px;
